--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -49,7 +49,7 @@
         <div class="card">
           <img
             class="card-img-top"
-            src="assets/img/realtors/kyle.jpg"
+            src="{{mvp_realtor.photo_main.url}}"
             alt="Seller of the month"
           />
           <div class="card-body">
@@ -84,46 +84,25 @@
   <div class="container">
     <h2 class="text-center">Our Team</h2>
     <div class="row text-center">
+      {% if realtors %} {% for realtor in realtors %}
       <div class="col-md-4">
         <img
-          src="assets/img/realtors/kyle.jpg"
+          src="{{realtor.photo_main.url}}"
           alt=""
           class="rounded-circle mb-3"
         />
-        <h4>Kyle Brown</h4>
+        <h4>{{realtor.name}}</h4>
         <p class="text-success">
           <i class="fas fa-award text-success mb-3"></i> Realtor
         </p>
         <hr />
-        <p><i class="fas fa-phone"></i> (555)-555-5555</p>
-        <p><i class="fas fa-envelope-open"></i> kyle@btrealestate.co</p>
+        <p><i class="fas fa-phone"></i> {{realtor.phone}}</p>
+        <p><i class="fas fa-envelope-open"></i> {{realtor.email}}</p>
       </div>
-
-      <div class="col-md-4">
-        <img
-          src="assets/img/realtors/mark.jpg"
-          alt=""
-          class="rounded-circle mb-3"
-        />
-        <h4>Mark Hudson</h4>
-        <p class="text-success">Realtor</p>
-        <hr />
-        <p><i class="fas fa-phone"></i> (444)-444-4444</p>
-        <p><i class="fas fa-envelope-open"></i> mark@btrealestate.co</p>
-      </div>
-
-      <div class="col-md-4">
-        <img
-          src="assets/img/realtors/jenny.jpg"
-          alt=""
-          class="rounded-circle mb-3"
-        />
-        <h4>Jenny Johnson</h4>
-        <p class="text-success">Realtor</p>
-        <hr />
-        <p><i class="fas fa-phone"></i> (333)-333-3333</p>
-        <p><i class="fas fa-envelope-open"></i> jenny@btrealestate.co</p>
-      </div>
+      <!--  -->
+      {% endfor %} {%else%}
+      <div class="col-md-12">No Realtors available</div>
+      {% endif %}
     </div>
   </div>
 </section>
