--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -46,6 +46,7 @@
         </p>
       </div>
       <div class="col-md-4">
+        {% if mvp_realtor %}
         <div class="card">
           <img
             class="card-img-top"
@@ -54,13 +55,14 @@
           />
           <div class="card-body">
             <h5 class="card-title">Seller Of The Month</h5>
-            <h6 class="text-secondary">Kyle Brown</h6>
+            <h6 class="text-secondary">{{mvp_realtor.name}}</h6>
             <p class="card-text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
               nesciunt amet, illo itaque similique repellat. content.
             </p>
           </div>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
