--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -81,7 +81,7 @@
 </section>
 
 <!-- ALERTS -->
-{% include '%partials/_alerts.html%' %}
+{% include 'partials/_alerts.html' %}
 
 <!-- Listings -->
 <section id="listings" class="py-5">
