--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -34,10 +34,6 @@
         >
            <a class="nav-link" href="{%url 'about'%}">About</a>
         </li>
-
-        <!-- <li class="nav-item mr-3">
-          <a class="nav-link" href="{%url 'about'%}">About</a>
-        </li> -->
         <li 
         {% if "listings" in request.path %}
           class="nav-item active mr-3"
@@ -50,7 +46,29 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
+        {% if user.is_authenticated %}
         <li
+         {% if "dashboard" in request.path %}
+          class="nav-item active mr-3"
+        {% else %}
+           class="nav-item mr-3"
+        {% endif %}
+        >
+          <a class="nav-link" href="{%url 'dashboard' %}">
+           Welcome {{user.username}} (dashboard)</a
+          >
+        </li>
+       <!-- Implementing a logout form -->
+          <li class="nav-item mr-3">
+            <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link"> <i class="fas fa-sign-out-alt"></i> Logout</a>
+            <form action="{% url 'logout' %}" method="POST" id="logout">
+              {% csrf_token %}
+              <input type="hidden">
+            </form>
+          </li>
+
+        {%else%}
+         <li
          {% if "register" in request.path %}
           class="nav-item active mr-3"
         {% else %}
@@ -74,6 +92,7 @@
             Login</a
           >
         </li>
+        {% endif %}
       </ul>
     </div>
   </div>
