--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %} {% load humanize %}
+{% extends "base.html" %} {% if True %} {% block title%} Welcome{% endblock %}
+{%endif%} {% block content %} {% load humanize %}
+
 <!-- Showcase -->
 <section id="showcase">
   <div class="container text-center">
