--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% if True %} {% block title%} Login{% endblock %} {%
+endif %} {% block content %}
 
 <section id="login" class="bg-light py-5">
   <div class="container">
