--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% if True %} {% block title%} Register{% endblock %}
+{% endif %} {% block content %}
 
 <section id="register" class="bg-light py-5">
   <div class="container">
