--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %} {% load humanize %}
+{% extends 'base.html' %} {% if True %} {% load humanize %} {% block title%}
+{{listing.title}}{% endblock %} {% endif %} {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
   <div class="container">
     <div class="row text-center">
