--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %} {% load humanize %}
+{% extends 'base.html' %} {% if True %} {% block title%} Browse Property
+Listing{% endblock %} {%endif%} {% block content %} {% load humanize %}
 
 <section id="showcase-inner" class="py-5 text-white">
   <div class="container">
