--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% if True %} {% block title%} Login{% endblock %} {%
-endif %} {% block content %}
+{% extends "base.html" %} {% block content%}
 
 <section id="login" class="bg-light py-5">
   <div class="container">
