--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -173,20 +173,46 @@
         </button>
       </div>
       <div class="modal-body">
-        <form>
+        <form action="{% url 'index' %}" method="POST">
+          {% csrf_token %}
+          <p></p>
+          {%if user.is_authenticated %}
+          <input type="hidden" name="user_id" value="{{user.id}}" />
+          {%else%}
+          <input type="hidden" name="user_id" value="0" />
+          {% endif %}
+          <input
+            type="hidden"
+            name="realtor_email"
+            value="{{listing.realtor.email}}"
+          />
+          <input type="hidden" name="listing_id" value="{{listing.id}}" />
           <div class="form-group">
             <label for="property_name" class="col-form-label">Property:</label>
             <input
               type="text"
               name="listing"
               class="form-control"
-              value="45 Drivewood Cirlce"
+              value="{{listing.title}}"
               disabled
             />
           </div>
           <div class="form-group">
             <label for="name" class="col-form-label">Name:</label>
-            <input type="text" name="name" class="form-control" required />
+            <input
+              type="text"
+              name="name"
+              class="form-control"
+              {%
+              if
+              user.is_authenticated
+              %}
+              value="Musa"
+              {%
+              endif
+              %}
+              required
+            />
           </div>
           <div class="form-group">
             <label for="email" class="col-form-label">Email:</label>
